Login and default home carousel template

--- a/application/views/_templates/header.twig
+++ b/application/views/_templates/header.twig
@@ -6,4 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ URL }}vendor/twbs/bootstrap/dist/css/bootstrap.min.css">
     </head>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ URL }}home">Gestione Fotografie</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="{{ URL }}home">Home</a>
+                    <a class="nav-link active btn btn-primary" style="color: white" aria-current="page" href="{{ URL }}login">Login / Register</a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <body>
