Image upload saved into db

--- a/application/views/_templates/header.twig
+++ b/application/views/_templates/header.twig
@@ -25,6 +25,7 @@
                                 {% if session.ruolo == "fotografo" %}
                                     <li><a class="dropdown-item" href="{{ URL }}upload">Carica fotografia</a></li>
                                 {% endif %}
+                                <li><a class="dropdown-item" href="{{ URL }}logout">Logout</a></li>
                             </ul>
                         </li>
                     {% else %}
