--- a/application/views/home/home.twig
+++ b/application/views/home/home.twig
@@ -1,26 +1,62 @@
 {% include '_templates/header.twig' %}
+<style>
+    .carousel {
+        height: 70vh;
+        overflow: hidden;
+        background-color: black;
+    }
+
+    @media (max-width: 768px) {
+        .carousel {
+            height: 30vh;
+        }
+    }
+
+    .carousel-item img {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        margin: auto;
+        display: block;
+        position: relative;
+    }
+
+    .card-img-top {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+
+    .col-md-4 {
+        margin-top: 15px;
+        margin-right: -10px;
+    }
+</style>
 <br>
 <div class="container col-md-8 col-sm-12">
     <div id="homeCarouselIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
+            {% for i in range(0, best3|length-1) %}
+                {% if i == 0 %}
+                    <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                {% else %}
+                    <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="{{ i }}" aria-label="Slide {{ i+1 }}"></button>
+                {% endif %}
+            {% endfor %}
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-                <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-                <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-                <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="">
-            </div>
+            {% for i in range(0, best3|length-1) %}
+                {% if i == 0 %}
+                    <div class="carousel-item active">
+                        <img src="{{ URL }}{{ best3[i][0].path }}" class="d-block w-100" alt="">
+                    </div>
+                {% else %}
+                    <div class="carousel-item">
+                        <img src="{{ URL }}{{ best3[i][0].path }}" class="d-block w-100" alt="">
+                    </div>
+                {% endif %}
+            {% endfor %}
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -39,14 +75,14 @@
 <h1 class="title" align="center">Catalogo fotografico</h1>
 <br>
 <div class="container col-md-8 col-sm-12">
-    <div class="row">
+    <div class="row justify-content-between">
         {% for foto in fotografie %}
                 <div class="card col-md-4 col-sm-12">
                     <a href="{{ URL }}fotografie/dettagli/{{ foto.id }}" class="text-decoration-none">
-                        <img class="card-img-top" src="{{ URL }}{{ foto.getPath }}" alt="Card image cap">
+                        <img class="card-img-top" src="{{ URL }}{{ foto.path }}" alt="Card image cap">
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item"><strong>Data: </strong>{{ foto.getDataOra }}</li>
-                            <li class="list-group-item"><strong>Luogo: </strong>{{ foto.getLuogo }}</li>
+                            <li class="list-group-item"><strong>Luogo: </strong>{{ foto.luogo }}</li>
                         </ul>
                     </a>
                 </div>
