--- a/application/views/home/home.twig
+++ b/application/views/home/home.twig
@@ -3,7 +3,6 @@
     .carousel {
         height: 70vh;
         overflow: hidden;
-        background-color: black;
     }
 
     @media (max-width: 768px) {
@@ -35,38 +34,45 @@
 </style>
 <br>
 <div class="container col-md-8 col-sm-12">
-    <div id="homeCarouselIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            {% for i in range(0, best3|length-1) %}
-                {% if i == 0 %}
-                    <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                {% else %}
-                    <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="{{ i }}" aria-label="Slide {{ i+1 }}"></button>
-                {% endif %}
-            {% endfor %}
+    <br>
+    <br>
+    <h1 align="center">Migliori fotografie</h1>
+    {% if best3 %}
+        <div id="homeCarouselIndicators" class="carousel slide shadow p-3 mb-5 bg-white rounded" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                {% for i in range(0, best3|length-1) %}
+                    {% if i == 0 %}
+                        <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    {% else %}
+                        <button type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide-to="{{ i }}" aria-label="Slide {{ i+1 }}"></button>
+                    {% endif %}
+                {% endfor %}
+            </div>
+            <div class="carousel-inner">
+                {% for i in range(0, best3|length-1) %}
+                    {% if i == 0 %}
+                        <div class="carousel-item active">
+                            <img src="{{ URL }}{{ best3[i][0].path }}" class="d-block w-100" alt="">
+                        </div>
+                    {% else %}
+                        <div class="carousel-item">
+                            <img src="{{ URL }}{{ best3[i][0].path }}" class="d-block w-100" alt="">
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div class="carousel-inner">
-            {% for i in range(0, best3|length-1) %}
-                {% if i == 0 %}
-                    <div class="carousel-item active">
-                        <img src="{{ URL }}{{ best3[i][0].path }}" class="d-block w-100" alt="">
-                    </div>
-                {% else %}
-                    <div class="carousel-item">
-                        <img src="{{ URL }}{{ best3[i][0].path }}" class="d-block w-100" alt="">
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#homeCarouselIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+    {% else %}
+        <p align="center">Non sono disponibili fotografie al momento!</p>
+    {% endif %}
 </div>
 <br>
 <br>
@@ -74,19 +80,24 @@
 <br>
 <h1 class="title" align="center">Catalogo fotografico</h1>
 <br>
-<div class="container col-md-8 col-sm-12">
-    <div class="row justify-content-between">
-        {% for foto in fotografie %}
-                <div class="card col-md-4 col-sm-12">
-                    <a href="{{ URL }}fotografie/dettagli/{{ foto.id }}" class="text-decoration-none">
-                        <img class="card-img-top" src="{{ URL }}{{ foto.path }}" alt="Card image cap">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><strong>Data: </strong>{{ foto.getDataOra }}</li>
-                            <li class="list-group-item"><strong>Luogo: </strong>{{ foto.luogo }}</li>
-                        </ul>
-                    </a>
-                </div>
-        {% endfor %}
+{% if fotografie %}
+    <div class="container col-md-8 col-sm-12">
+        <div class="row justify-content-between">
+            {% for foto in fotografie %}
+                    <div class="card col-md-4 col-sm-12">
+                        <a href="{{ URL }}fotografie/dettagli/{{ foto.id }}" class="text-decoration-none">
+                            <img class="card-img-top" src="{{ URL }}{{ foto.path }}" alt="Card image cap">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><strong>Data: </strong>{{ foto.getDataOra }}</li>
+                                <li class="list-group-item"><strong>Luogo: </strong>{{ foto.luogo }}</li>
+                            </ul>
+                        </a>
+                    </div>
+            {% endfor %}
+        </div>
     </div>
-</div>
+{% else %}
+    <p align="center">Non sono disponibili fotografie al momento!</p>
+{% endif %}
+
 {% include '_templates/footer.twig' %}
