--- a/application/views/_templates/header.twig
+++ b/application/views/_templates/header.twig
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ URL }}vendor/twbs/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ URL }}vendor/components/font-awesome/css/all.min.css">
         <script>
             const URL = "{{ URL }}";
         </script>
