--- a/application/views/upload/upload.twig
+++ b/application/views/upload/upload.twig
@@ -51,5 +51,6 @@
         </form>
     </div>
 </div>
+<script src="{{ URL }}public/js/piexif.js"></script>
 <script src="{{ URL }}public/js/imagePreview.js"></script>
 {% include '_templates/footer.twig' %}
