--- a/application/views/_templates/header.twig
+++ b/application/views/_templates/header.twig
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ URL }}home">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ URL }}classifica">Classifica</a>
+                    </li>
                     {% if session.ruolo %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active btn btn-primary" id="navProfiloDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white" aria-current="page" href="{{ URL }}login">Profilo</a>
