Stats with Chart.js library for user photos

--- a/application/views/classifica/classifica.twig
+++ b/application/views/classifica/classifica.twig
@@ -4,13 +4,13 @@
 <h1 align="center">Classifica delle migliori fotografie</h1>
 <br>
 <div class="col-md-8 col-sm-12 mx-auto shadow p-3 mb-5 bg-white rounded">
-    <table class="table table-striped">
+    <table class="table table-striped col-sm-12">
         <thead>
         <tr>
             <th scope="col">Punteggio</th>
             <th scope="col">Luogo</th>
-            <th scope="col">Data</th>
-            <th scope="col">Visualizzazioni</th>
+            <th scope="col" class="d-none d-sm-table-cell">Data</th>
+            <th scope="col" class="d-none d-sm-table-cell">Visualizzazioni</th>
             <th scope="col">Autore</th>
             <th scope="col"></th>
         </tr>
@@ -20,8 +20,8 @@
                 <tr>
                     <td>{{ fotografia[1] }}</td>
                     <td>{{ fotografia[0].luogo }}</td>
-                    <td>{{ fotografia[0].getDataOra }}</td>
-                    <td>{{ fotografia[0].visualizzazioni }}</td>
+                    <td class="d-none d-sm-table-cell">{{ fotografia[0].getDataOra }}</td>
+                    <td class="d-none d-sm-table-cell">{{ fotografia[0].visualizzazioni }}</td>
                     <td>{{ fotografia[0].getUtenteId }}</td>
                     <td><a class="btn btn-primary" href="{{ URL }}fotografie/dettagli/{{ fotografia[0].id }}">Mostra dettagli</a></td>
                 </tr>
@@ -34,12 +34,12 @@
 <h1 align="center">Classifica delle fotografie più viste</h1>
 <br>
 <div class="col-md-8 col-sm-12 mx-auto shadow p-3 mb-5 bg-white rounded">
-    <table class="table table-striped">
+    <table class="table table-striped col-sm-12">
         <thead>
         <tr>
             <th scope="col">Visualizzazioni</th>
             <th scope="col">Luogo</th>
-            <th scope="col">Data</th>
+            <th scope="col" class="d-none d-sm-table-cell">Data</th>
             <th scope="col">Autore</th>
             <th scope="col"></th>
         </tr>
@@ -49,7 +49,7 @@
             <tr>
                 <td>{{ fotografia.visualizzazioni }}</td>
                 <td>{{ fotografia.luogo }}</td>
-                <td>{{ fotografia.getDataOra }}</td>
+                <td class="d-none d-sm-table-cell">{{ fotografia.getDataOra }}</td>
                 <td>{{ fotografia.getUtenteId }}</td>
                 <td><a class="btn btn-primary" href="{{ URL }}fotografie/dettagli/{{ fotografia.id }}">Mostra dettagli</a></td>
             </tr>
