--- a/application/views/_templates/header.twig
+++ b/application/views/_templates/header.twig
@@ -23,14 +23,19 @@
                         <a class="nav-link" aria-current="page" href="{{ URL }}home">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ URL }}home#catalogo">Catalogo fotografico</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ URL }}classifica">Classifica</a>
                     </li>
                     {% if session.ruolo %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active btn btn-primary" id="navProfiloDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white" aria-current="page" href="{{ URL }}login">Profilo</a>
                             <ul class="dropdown-menu" aria-labelledby="navProfiloDropDown">
+                                <li><a class="dropdown-item" href="{{ URL }}profilo">Il mio profilo</a></li>
                                 {% if session.ruolo == "fotografo" %}
                                     <li><a class="dropdown-item" href="{{ URL }}upload">Carica fotografia</a></li>
+                                    <li><a class="dropdown-item" href="{{ URL }}profilo/fotografie">Le mie fotografie</a></li>
                                 {% endif %}
                                 <li><a class="dropdown-item" href="{{ URL }}logout">Logout</a></li>
                             </ul>
