--- a/application/views/profilo/myphotos.twig
+++ b/application/views/profilo/myphotos.twig
@@ -43,7 +43,7 @@
 <br>
 <br>
 <br>
-<div class="container col-12">
+<div class="container col-12" id="stats">
     <h1 align="center">Statistiche delle mie fotografie</h1>
     <div class="d-flex align-items-center justify-content-center shadow p-3 mb-5 bg-white rounded col-sm-12">
         <div class="row col-md-10 col-sm-12">
