Session cookie params set

--- a/application/views/fotografie/dettagli.twig
+++ b/application/views/fotografie/dettagli.twig
@@ -68,7 +68,7 @@
                     <p>Non è possibile aggiungere una valutazione alle proprie immagini!</p>
                 {% endif %}
             {% else %}
-                <p>Devi avere un'account per aggiungere una valutazione!</p>
+                <p>Devi avere un account per aggiungere una valutazione!</p>
             {% endif %}
         </div>
     </div>
@@ -91,7 +91,7 @@
                     </div>
                 {% endif %}
             {% else %}
-                <p>Devi avere un'account per aggiungere un commento!</p>
+                <p>Devi avere un account per aggiungere un commento!</p>
             {% endif %}
             <hr>
             {% if commenti %}
